--- a/index.html
+++ b/index.html
@@ -919,6 +919,7 @@
 
     <a-torus segments-tubular="260" color="#f2c9c5"  scale="13 12 15" material="transparency: true; opacity: 0.5;" position="-3 0 -10" arc="360" radius="3" radius-tubular="0.01" animation="property: rotation; from: 0 0 0; to: 3600 360 -360; dur: 50000; easing: easeInOutSine; loop: true;"></a-torus>
 -->
+  <!--Polígonos icosaedros-->
 
   <a-entity id="rigP1Poly" scale="40 40 40" position="0 0 0" visible="true">
     <!--Polígono 1-->  
@@ -935,6 +936,7 @@
 
   </a-entity>
 
+  <!--Polígonos icosaedros-->
 
   <a-entity id="rigP2Poly" scale="40 40 40" position="0 0 0" visible="true">
     <!--Polígono 2-->  
@@ -951,9 +953,12 @@
 
   </a-entity>
 
+
+  <!--Polígonos piramidales-->
+
   <a-entity id="animacionPiramide" visible="true">
 
-    <a-entity id="rigPiramide" scale="100 100 100" position="0 0 10" visible="true" rotation="110 0 180">
+    <a-entity id="rigPiramide" scale="40 40 40" position="0 0 10" visible="true" rotation="0 0 0">
       <!--Piramide-->  
       <a-entity  id="piramidePoly"
       gltf-model="#piramideSRC" scale="40 40 40" position="0 0 0" visible="true"
