--- a/index.html
+++ b/index.html
@@ -323,6 +323,8 @@
      
         <canvas id="hydraCanvas" width="1024" height="1024"></canvas>
 
+        <canvas id="hydraCanvas2" width="1024" height="1024"></canvas>
+
       </a-assets>
 
  
@@ -355,7 +357,7 @@
 
 
 -->
-  <a-gltf-model id="piedraAvatar" body="type:static" visible="true" src="#piedraAvatarSRC" scale="11 11 11" position="-0.1 0.1 -3.8" rotation="0 180 0" animation-mixer="timeScale: 5"
+  <a-gltf-model id="piedraAvatar" body="type:static" visible="false" src="#piedraAvatarSRC" scale="11 11 11" position="-0.1 0.1 -3.8" rotation="0 180 0" animation-mixer="timeScale: 5"
   
   ></a-gltf-model>
 
@@ -1060,7 +1062,9 @@
 
 <a-sky position="0 0 5" scale="2 2 2" animation="property: rotation; from: 0 0 0; to: 0 360 0; loop: true; dur: 60000; easing: linear" src="#sky"></a-sky>
 -->
-
+<a-sphere
+id="hydraSphere"
+visible="false" scale="120 120 120" canvas-updater-primitives material="src:#hydraCanvas2; side: double;" position="0 0 -10"></a-sphere>
 
 </a-scene>
 
